--- a/templates/index.html
+++ b/templates/index.html
@@ -9,19 +9,22 @@
 </head>
 <body>
     <div id="wrapper">
-       {% block body %}
-        <div class="choice">
-            <div id="new">
-                <a href="/create_card.html" id="cross"></a>
-                <a href="/create_card.html"><h2>Create a flash card</h2></a>
-            </div>
+        {% block body %}
+        <div id="login">
 
-        </div>
-        <div class="choice">
-            <div id="play">
-                <a href="#" id="arrow"></a>
-                <a href="#"><h2>Play flash cards</h2></a>
-            </div>
+            <form id="form" method="POST">
+                <h2>Login</h2>
+                <p>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username">
+                </p>
+                <p>
+                    <label for="password">Password:</label>
+                    <input type="text" id="password" name="password">
+                </p>
+                {% module xsrf_form_html() %}
+                <button id="login-button" type="submit" value="Login">Login</button>
+            </form>
         </div>
         {% end %}
     </div>
