--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,10 +2,6 @@
     font-family: sans-serif;
 }
 
-#wrapper {
-    background-color: #F4F6F6;
-}
-
 a {
     text-decoration: none;
     color: inherit;
@@ -15,6 +11,81 @@ a {
     height: 100%;
 }
 
+.login {
+    width: 60%;
+    height: 30%;
+    padding: 10%;
+    margin: auto;
+    border-radius: 20px;
+    background-color: #F4F6F6;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.form {
+    width: 80%;
+    height: 90%;
+    margin: auto;
+    font-size: 1.5em;
+}
+
+.form > h1 {
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid black;
+    font-size: 2em;
+}
+
+.form > label {
+    display: block;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    font-size: 1.5em;
+}
+
+.form > input {
+    width: 100%;
+    height: 60px;
+    border-radius: 5px;
+    border: none;
+    padding: 2%;
+    font-size: 1.3em;
+}
+
+.form-button {
+    display:block;
+    width: 100%;
+    text-align: center;
+    padding: 5%;
+    margin-top: 20px;
+    font-size: 1.5em;
+    background: #5DADE2;
+    border: none;
+    border-radius: 5px;
+}
+
+#sign-up {
+    text-align: center;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+#sign-up-overlay {
+}
 .choice {
     width: 100%;
     min-width: 250px;
