--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+/* Base */
 * {
     font-family: sans-serif;
 }
@@ -11,10 +12,22 @@ a {
     height: 100%;
 }
 
+.overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+/* Login and sign up */
 .login {
     width: 60%;
-    height: 30%;
-    padding: 10%;
+    height: 40%;
+    padding: 0 2%;
     margin: auto;
     border-radius: 20px;
     background-color: #F4F6F6;
@@ -27,8 +40,7 @@ a {
 
 .form {
     width: 80%;
-    height: 90%;
-    margin: auto;
+    margin: 10% auto;
     font-size: 1.5em;
 }
 
@@ -54,11 +66,12 @@ a {
     border: none;
     padding: 2%;
     font-size: 1.3em;
+    margin-top: 5px;
 }
 
 .form-button {
     display:block;
-    width: 100%;
+    width: 104%;
     text-align: center;
     padding: 5%;
     margin-top: 20px;
@@ -68,24 +81,15 @@ a {
     border-radius: 5px;
 }
 
-#sign-up {
+p.sign-up {
     text-align: center;
 }
 
-.overlay {
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
+#sign-up-overlay {
+    height: 50%;
 }
 
-#sign-up-overlay {
-}
+/* Home Page */
 .choice {
     width: 100%;
     min-width: 250px;
