Sign up form connected to db

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="overlay" >
             <div id="sign-up-overlay" class="login">
-                <form class="form" method="POST">
+                <form class="form" action="/sign_up" method="POST">
                     <label for="uname">
                         Username:
                     </label>
